# head-pose-estimation

./: .clippy.toml  Cargo.toml  PRD.rust.md  README.md  README_RUST.md  build.rs  config.example.yaml  cursor_filters.py  face_detection.py  generate_filter_reference.py  justfile  log.txt  loop3.py  main.py  mark_detection.py  movement_detector.py  moving.txt  pose_estimation.py  pyproject.toml  requirements.txt  rustfmt.toml  shell.nix  still1.txt  still2.txt  still3.txt  todo.md
.github/workflows/: ci.yml  release.yml
benches/: filter_accuracy_benchmarks.rs  filter_benchmarks.rs  performance.rs  pose_estimation_benchmarks.rs
proptest-regressions/utils/: safe_cast.txt
src/: app.rs  config.rs  constants.rs  cursor_control.rs  error.rs  face_detection.rs  lib.rs  main.rs  mark_detection.rs  movement_detector.rs  pose_estimation.rs  utils.rs
src/filters/: exponential.rs  hampel.rs  kalman.rs  low_pass.rs  median.rs  mod.rs  moving_average.rs
src/utils/: image_conversion.rs  safe_cast.rs
tests/: cmdline_args_test.rs  cursor_control_comprehensive_test.rs  cursor_control_test.rs  edge_case_tests.rs  error_handling_tests.rs  filter_accuracy_test.rs  filter_validation_tests.rs  integration_test.rs  integration_test_improved.rs  onnx_model_tests.rs  python_parity_test.rs  test_helpers.rs  video_input_test.rs  video_processing_test.rs  video_robustness_test.rs
