[package]
name = "head-pose-estimation"
version = "0.1.0"
edition = "2021"
authors = ["Mark Ruvald Pedersen <mpedersen@users.noreply.github.com>"]
description = "Realtime human head pose estimation with ONNX Runtime and OpenCV - Rust port"
repository = "https://github.com/yinguobing/head-pose-estimation"
license = "MIT"

[dependencies]
# Computer Vision and ML
opencv = "0.95"
ort = { version = "1.16", features = ["download-binaries"] }
ndarray = "0.15"
image = "0.24"

# Linear Algebra
nalgebra = "0.33"

# CLI and Configuration
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error Handling and Logging
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# X11 interaction for cursor control
x11rb = "0.13"

# Concurrency
rayon = "1.10"
tokio = { version = "1.0", features = ["full"] }

# Utilities
once_cell = "1.20"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
proptest = "1.4"
rand = "0.8"

[[bench]]
name = "filter_benchmarks"
harness = false

[[bench]]
name = "pose_estimation_benchmarks"
harness = false

[[bench]]
name = "filter_accuracy_benchmarks"
harness = false

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints
module_name_repetitions = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
