[project]
name = "head-pose-estimation"
version = "0.1.0"
description = "Realtime human head pose estimation with ONNX Runtime and OpenCV"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Yin Guobing", email = ""},
]
dependencies = [
    "coloredlogs==15.0.1",
    "flatbuffers==23.5.26",
    "humanfriendly==10.0",
    "mpmath==1.3.0",
    "numpy<2.0,>=1.26.0",
    "onnxruntime==1.17.1",
    "opencv-python>=4.8.0",
    "packaging==23.1",
    "protobuf==4.23.2",
    "sympy==1.12",
]

[project.urls]
Homepage = "https://github.com/yinguobing/head-pose-estimation"
Repository = "https://github.com/yinguobing/head-pose-estimation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]